#2 add user domain
